WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312971
REGRESSION(
311234@main
): Partially revert "[Skia] Add deferred texture binding support for dma-buf backed GPU atlas textures"
https://bugs.webkit.org/show_bug.cgi?id=312971
Summary
REGRESSION(311234@main): Partially revert "[Skia] Add deferred texture bindin...
Nikolas Zimmermann
Reported
2026-04-22 00:39:46 PDT
This caused a performance regression on the MotionMark/Images benchmark and turned out not to fix any real problem.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-04-22 00:42:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63307
EWS
Comment 2
2026-04-22 02:14:40 PDT
Committed
311760@main
(8ff337c2222f): <
https://commits.webkit.org/311760@main
> Reviewed commits have been landed. Closing PR #63307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug