REGRESSION(311234@main): Partially revert "[Skia] Add deferred texture binding support for dma-buf backed GPU atlas textures" https://bugs.webkit.org/show_bug.cgi?id=312971

Reviewed by Carlos Garcia Campos.

This partially reverts 311234@main, keeping only the "avoid upload
fence" in dma-buf upload code path change and a BitmapTexture specific
fix to remove the LinearTexture/VivanteSuperTiledTexture related flags
if dma-buf support backing support is not available.

The original patch caused a peformance regression in MotionMark/Images,
due to the glFlush() usage in the upload thread, necessary to support
deferred texture binding, but the feature itself didn't fix the
rendering glitches observed on particular configurations, so revert that
logic.

* Source/WebCore/platform/graphics/skia/SkiaGPUAtlas.cpp:
(WebCore::SkiaGPUAtlas::create):
(WebCore::SkiaGPUAtlas::uploadImages):
(WebCore::SkiaGPUAtlas::ensureBackendTexture): Deleted.
* Source/WebCore/platform/graphics/skia/SkiaGPUAtlas.h:
* Source/WebCore/platform/graphics/skia/SkiaPaintingEngine.cpp:
(WebCore::SkiaPaintingEngine::createAtlas):
(WebCore::SkiaPaintingEngine::record):
* Source/WebCore/platform/graphics/skia/SkiaPaintingEngine.h:
* Source/WebCore/platform/graphics/skia/SkiaReplayCanvas.cpp:
(WebCore::SkiaReplayCanvas::SkiaReplayCanvas):
* Source/WebCore/platform/graphics/texmap/BitmapTexture.cpp:
(WebCore::BitmapTexture::BitmapTexture):
(WebCore::BitmapTexture::reset):
(WebCore::BitmapTexture::bindDMABufToTexture): Deleted.
* Source/WebCore/platform/graphics/texmap/BitmapTexture.h:

Canonical link: https://commits.webkit.org/311760@main